--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,10 @@ jobs:
         uses: actions/checkout@v4.1.1
 
       - name: Configure Project
-        runs: cmake -S . -B build BUILD_TESTS=ON
+        run: cmake -S . -B build BUILD_TESTS=ON
 
       - name: Build Project
-        runs: cmake --build build
+        run: cmake --build build
 
       - name: Test Project
-        runs: ctest --test-dir build
+        run: ctest --test-dir build
